--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,12 +2,12 @@
 fixtures:
   repositories:
     augeas_core:
-      repo: 'https://github.com/simp/pupmod-puppetlabs-augeas_core'
-      puppet_version: '>= 6.0.0'
-    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
-    firewalld: https://github.com/voxpupuli/puppet-firewalld
-    simp_options: https://github.com/simp/pupmod-simp-simp_options
-    simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib: https://github.com/simp/puppetlabs-stdlib
+      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
+      puppet_version: ">= 6.0.0"
+    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup.git
+    firewalld: https://github.com/voxpupuli/puppet-firewalld.git
+    simp_options: https://github.com/simp/pupmod-simp-simp_options.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
   symlinks:
     simp_firewalld: "#{source_dir}"
