--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,9 +1,7 @@
 ---
 fixtures:
   repositories:
-    augeas_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
-      puppet_version: ">= 6.0.0"
+    augeas_core: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
     compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup.git
     firewalld: https://github.com/voxpupuli/puppet-firewalld.git
     simp_options: https://github.com/simp/pupmod-simp-simp_options.git
