(#38) Allow the module to take in rules via hieradata
Fixes #38

--- a/spec/fixtures/hieradata/default.yaml
+++ b/spec/fixtures/hieradata/default.yaml
@@ -1,5 +1,6 @@
 ---
 # SIMP infrastructure settings
+simp_firewalld::rules: {}
 simp_options::trusted_nets:   ['192.168.122.0/24']
 
 compliance_markup::validate_profiles:
